--- a/templates/brand_list.html
+++ b/templates/brand_list.html
@@ -6,8 +6,10 @@
 <div class="container marketing" style="padding-top: 15px;">
 	<div class="row" style=" background-color: #fffff"> 
        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf); margin: 150px 1px 5px 1px;">    
+       <p style="color: #02845e;  text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Нам довіряють свою продукцію найкращі бренди! </p>
        <div class="myCarousel">
-      <div class="row" style=" background-color: #fffff"> 
+      <div class="row" style=" background-color: #fffff">
+
         <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background: linear-gradient(45deg,#ffffff, #fffbdf);">      
         {% for brand in brands %}
         <div class="col-lg-4" style="padding-top: 20px">
