--- a/templates/main.html
+++ b/templates/main.html
@@ -37,7 +37,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="{% url 'brands' %}">Торгівельні команди</a></li>
-        <li><a href="{% url 'vacancy' %}">Кар'єра</a></li>
+        <li><a href="{% url 'vacancy' %}">Вакансії підприємства</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
           <ul class="dropdown-menu">
