--- a/templates/brand.html
+++ b/templates/brand.html
@@ -12,11 +12,30 @@
         <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf);">
           <div class="row">
            <div class="col-lg-12" style="padding-top: 20px">
-              <img class="img-circle" data-src="holder.js/240x240" alt="240x240" src="{{ brand.logo.url }}" style="width: 200px; height: 200px; display: block; margin: 0 auto;">               
+              <img  src="{{ brand.logo.url }}" style="width: 200px; height: 200px; display: block; margin: 0 auto;">               
                <p style="text-align: center; font-family: Snell Roundhand, cursive;  font-size: 35px;">{{ brand.nam }}</p>
             </div>  
           </div>
         <div class="row">
+          <div class="col-lg-12">
+             <div class="col-lg-4" style="padding: 2px 2px 2px 2px;">
+              <img src="{% static "images/10.jpg" %}" style="border-radius: 5px 5px 5px 5px; width:370px; height: 370px; display: block; margin: 0 auto;">
+            </div>
+            <div class="col-lg-4" style="padding: 2px 2px 2px 2px;">
+              <img  src="{% static "images/adjari.jpg" %}" style="border-radius: 5px 5px 5px 5px; width:370px; height: 370px; display: block; margin: 0 auto;">
+            </div>
+            <div class="col-lg-4" style="padding: 2px 2px 2px 2px; border-radius: 5px 5px 5px 5px;">
+              <img  src="{% static "images/Bukovina.jpg" %}" style="border-radius: 5px 5px 5px 5px; width:370px; height: 357px; display: block; margin: 0 auto;">
+            </div>
+            <div class="col-lg-4" style="padding: 2px 2px 2px 2px; border-radius: 5px 5px 5px 5px;">
+              <img  src="{% static "images/10.jpg" %}" style="border-radius: 5px 5px 5px 5px; width:370px; height: 370px; display: block; margin: 0 auto;">
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="row">         
           <div class="myClass7">
               <p style="margin: 0px 15px 0px 15px; font-family:Lucida Sans Unicode; font-size: 15px; text-align: justify
               ">{{ brand.trademark }}</p>
