--- a/templates/vacancy_nivki.html
+++ b/templates/vacancy_nivki.html
@@ -31,12 +31,12 @@
         <div class="myClass7"> 
         	<div class="row">
         		<div class="col-lg-12">
-        			<p style="text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце відправлення розвозки</p>
+        			<p style="text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце знаходження</p>
         		</div>
         	</div>         
             <div class="row">
             	<div class="col-lg-12">
-                  <iframe src="https://www.google.com/maps/embed?pb=!4v1529589527497!6m8!1m7!1s2rhQkXutcFHw5gQ4HFzrrw!2m2!1d50.40095423821493!2d30.56223274158709!3f318.2508637855579!4f-11.089882037717217!5f0.7820865974627469" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>                  
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9031.83653234612!2d30.392223645714406!3d50.45078430198078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cc6f8ddedb9b%3A0x642fbcbcad2659c4!2sRemont+Inzhektoriv%2C+Kapital%CA%B9nyy+Remont+Dvyhuna%2C+Vyhotovlennya+Ta+Remont+Reduktoriv!5e1!3m2!1sru!2sua!4v1530539343681" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>                  
                 </div>
             </div>
         </div>    
