--- a/templates/vacancy_oblast.html
+++ b/templates/vacancy_oblast.html
@@ -36,8 +36,8 @@
         	</div>         
             <div class="row">
             	<div class="col-lg-12">
-                  <iframe src="https://www.google.com/maps/embed?pb=!4v1529589527497!6m8!1m7!1s2rhQkXutcFHw5gQ4HFzrrw!2m2!1d50.40095423821493!2d30.56223274158709!3f318.2508637855579!4f-11.089882037717217!5f0.7820865974627469" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>                  
-                </div>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10121.057558187955!2d30.414310309929146!3d50.640780765239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472b2bb9b67b65e9%3A0x529c5b0f83900f14!2z0LLRg9C70LjRhtGPINCf0L7Qu9GM0L7QstCwLCA5LCDQodGC0LDRgNGWINCf0LXRgtGA0ZbQstGG0ZYsINCa0LjRl9Cy0YHRjNC60LAg0L7QsdC7LiwgMDczNTM!5e0!3m2!1sru!2sua!4v1530538229229" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>        
+              </div>
             </div>
         </div>    
 
