--- a/templates/brand.html
+++ b/templates/brand.html
@@ -9,41 +9,62 @@
       <!-- Three columns of text below the carousel -->
       
       <div class="row"> 
-        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf);">
+        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px;   background: linear-gradient(45deg,#ffffff, #fffbdf);;
+    background-size: 100% 100%;  ">
           <div class="row">
            <div class="col-lg-12" style="padding-top: 20px">
-              <img  src="{{ brand.logo.url }}" style="width: 200px; height: 200px; display: block; margin: 0 auto;">               
-               <p style="text-align: center; font-family: Snell Roundhand, cursive;  font-size: 35px;">{{ brand.nam }}</p>
-            </div>  
-          </div>
-        <div class="row">
-          <div class="col-lg-12">
-             <div class="col-lg-4" style="padding: 2px 2px 2px 2px;">
-              <img src="{% static "images/10.jpg" %}" style="border-radius: 5px 5px 5px 5px; width:370px; height: 370px; display: block; margin: 0 auto;">
-            </div>
-            <div class="col-lg-4" style="padding: 2px 2px 2px 2px;">
-              <img  src="{% static "images/adjari.jpg" %}" style="border-radius: 5px 5px 5px 5px; width:370px; height: 370px; display: block; margin: 0 auto;">
-            </div>
-            <div class="col-lg-4" style="padding: 2px 2px 2px 2px; border-radius: 5px 5px 5px 5px;">
-              <img  src="{% static "images/Bukovina.jpg" %}" style="border-radius: 5px 5px 5px 5px; width:370px; height: 357px; display: block; margin: 0 auto;">
-            </div>
-            <div class="col-lg-4" style="padding: 2px 2px 2px 2px; border-radius: 5px 5px 5px 5px;">
-              <img  src="{% static "images/10.jpg" %}" style="border-radius: 5px 5px 5px 5px; width:370px; height: 370px; display: block; margin: 0 auto;">
-            </div>
-          </div>
-        </div>
-
-
-
-        <div class="row">         
-          <div class="myClass7">
-              <p style="margin: 0px 15px 0px 15px; font-family:Lucida Sans Unicode; font-size: 15px; text-align: justify
-              ">{{ brand.trademark }}</p>
-              <hr class="featurette-divider" style="border-color: #024e38; margin: 15px 75px 15px 75px;">
-          </div>
             
 
+              <p style="text-align: center; font-family: 'RobotoLight',sans-serif;  font-size: 55px; color: #000;">{{ brand.nam }}</p>
+                         
+            </div>  
+          </div>
+        <div class="row">         
+          <div class="myClass71">
+              <p style="margin: 0px 15px 0px 15px; font-family: 'RobotoLight',sans-serif; font-size: 18px; text-align: justify; color: #000;
+              ">{{ brand.trademark }}</p>
+
+    <div class="myCarousel1">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" style="justify-content: center; color:black; width: 50%; height: 400px;">
+      <!-- Indicators -->
+      
+      <div class="carousel-inner" style="width: 110px; height: 400px;">
+        <div class="item active" style="width: 110px; height: 400px; background-color: #fff">
+          <img style="width: 110px; height: 400px;" alt="First slide" src="{% static "images/a1.png" %}">
+          
+        </div>
+        <div class="item" style="width: 110px; height: 400px;">
+          <img style="width: 110px; height: 400px;" alt="Second slide" src="{% static "images/a2.png" %}">
+          
+        </div>
+        <div class="item" style="width: 110px; height: 400px;">
+          <img style="width: 110px; height: 400px;" alt="Third slide" src="{% static "images/a3.png" %}">
+          
+        </div>
+      </div>
+
+      <a class="right mycarousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+   
+      </div><!-- /.carousel -->
+      </div>
+      </div>
+  </div>
+ 
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+   <!-- FOOTER -->
           </div>          
         </div>
-      <!-- FOOTER -->
+      </div>   
 {% endblock %}
