--- a/templates/brand_list.html
+++ b/templates/brand_list.html
@@ -7,19 +7,15 @@
 	<div class="row" style=" background-color: #fffff"> 
        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf); margin: 150px 1px 5px 1px;">    
        <p style="color: #02845e;  text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Нам довіряють свою продукцію найкращі бренди! </p>
-       <div class="myCarousel">
-      <div class="row" style=" background-color: #fffff">
-
-        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background: linear-gradient(45deg,#ffffff, #fffbdf);">      
-        {% for brand in brands %}
-        <div class="col-lg-4" style="padding-top: 20px">
-          <img class="img-circle" data-src="holder.js/240x240" alt="240x240" src="{{ brand.logo.url }}" style="width: 200px; height: 200px; display: block; margin: 0 auto;">
-            <h2 style="font-family: Snell Roundhand, cursive; text-align: center">{{ brand.nam }}</h2>
-            <p>У рамках проекту оглядових екскурсій «Відкрита ОБОЛОНЬ» головну пивоварню корпорації у Києві відвідали понад 125 тис. вітчизняних та іноземних гостей завдяки організації 4,6 тис. екскурсій.</p>
-            <p><a class="btn btn-default" href="{% url 'brand' brand.id %}" role="button">Деталі »</a></p>
-        </div><!-- /.col-lg-4 -->
+       <div class="section">       
+          <div class="container1" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background: linear-gradient(45deg,#ffffff, #fffbdf);">      
+          {% for brand in brands %}
+          <div class="card" style="padding: 20px">
+            <a href="{% url 'brand' brand.id %}"><img src="{{ brand.logo.url }}" style="border-radius: 5px 5px 5px 5px; width:270px; height: 270px; display: block; margin: 0 auto;"></a>              
+              
+          </div><!-- /.col-lg-4 -->
         {%endfor%}
-        </div>
+       
     </div>
       </div><!-- /.col-lg-12 -->
        
