--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
     <title>ЛКО ГРУП</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script src="{% static "js/script.js" %}"></script>
 
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -20,7 +20,7 @@
 
 </head>
 <body  style="background: linear-gradient(-45deg,#04130d, #02845e);" >
-  <nav class="navbar navbar-default navbar-fixed-top"  role="navigation">
+  <nav class="navbar navbar-default"  role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header" >
